GoalTracker/force-app/main/default/objects/Parent_Affiliation__c/Parent_Affiliation__c.object-meta.xml
<CustomObject>
    <description>AQ_Custom</description>
    <label>Parent Affiliation</label>
    <nameField>
        <displayFormat>PA-{0000000}</displayFormat>
        <label>Parent Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parent Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>