GoalTracker/force-app/main/default/objects/Parent_Affiliation__c/fields/Child_Contact_Record__c.field-meta.xml
<CustomField>
    <fullName>Child_Contact_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AQ_Custom</description>
    <label>Child Contact Record</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Parent Affiliations (Child Contact Record)</relationshipLabel>
    <relationshipName>Parent_Affiliations1</relationshipName>
    <type>Lookup</type>
</CustomField>