GoalTracker/force-app/main/default/objects/Parent_Affiliation__c/fields/Child_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Name__c</fullName>
    <description>AQ_Custom</description>
    <label>Child&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>