GoalTracker/force-app/main/default/objects/Parent_Affiliation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>AQ_Custom</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Parent Affiliations</relationshipLabel>
    <relationshipName>Parent_Affiliations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>