GoalTracker/force-app/main/default/objects/Parent_Affiliation__c/fields/Degree_Level__c.field-meta.xml
<CustomField>
    <fullName>Degree_Level__c</fullName>
    <description>AQ_Custom</description>
    <label>Degree Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>