GoalTracker/force-app/main/default/objects/Parent_Affiliation__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>AQ_Custom</description>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>