GoalTracker/force-app/main/default/objects/Parent_Affiliation__c/fields/Entering_Class__c.field-meta.xml
<CustomField>
    <fullName>Entering_Class__c</fullName>
    <description>AQ_Custom</description>
    <label>Entering Class</label>
    <length>4</length>
    <type>Text</type>
</CustomField>