GoalTracker/force-app/main/default/objects/Parent_Affiliation__c/fields/Expected_Grad_Year__c.field-meta.xml
<CustomField>
    <fullName>Expected_Grad_Year__c</fullName>
    <description>AQ_Custom</description>
    <label>Expected Grad Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>