GoalTracker/force-app/main/default/objects/Parent_Affiliation__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <description>AQ_Custom</description>
    <label>School</label>
    <length>244</length>
    <type>Text</type>
</CustomField>