GoalTracker/force-app/main/default/objects/Parent_Affiliation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>AQ_Custom</description>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>