GoalTracker/force-app/main/default/objects/Parent_Affiliation__c/fields/Student_Athlete__c.field-meta.xml
<CustomField>
    <fullName>Student_Athlete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AQ_Custom</description>
    <label>Student Athlete</label>
    <type>Checkbox</type>
</CustomField>